[package]
name = "dkg"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-bls12-381 = "0.4"
blake2 = "0.10.6"
serde = { version = "1.0.219", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
tokio   = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
bincode = "2.0.1"
dock_crypto_utils = { version = "0.22.0", default-features = false }
anyhow = "1.0.98"